--- a/01 - Logica/ano_copa.html
+++ b/01 - Logica/ano_copa.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="PT-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport">
-    <title>Ano Copa</title>
+    <title>Ano de Copa</title>
 </head>
 <body>
     
