--- a/06 - HTML - Projeto Barbearia Alura/projeto/contato.html
+++ b/06 - HTML - Projeto Barbearia Alura/projeto/contato.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport">
+        <meta name="viewport" content="width=device-width">
         <title>Contato | Barbearia Alura</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
@@ -58,7 +58,7 @@
                 <input type="submit" value="Enviar formulário" class="enviar">
             </form>
 
-            <table>
+            <table class="horario">
                 <thead>
                     <tr>
                         <th>Dia</th>
