--- a/06 - HTML - Projeto Barbearia Alura/projeto/produtos.html
+++ b/06 - HTML - Projeto Barbearia Alura/projeto/produtos.html
@@ -6,6 +6,7 @@
         <title>Produtos | Barbearia Alura</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserratdisplay=swap" rel="stylesheet">
     </head>
     <body>
         <header>
